--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,8 @@
       crossorigin="anonymous"
     />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Sports and casual wear online store" />
+    <title>Mellis webstore</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
